# spell

./: Cargo.toml  README.md
.github/workflows/: ci.yml
assets/shaders/actor_shape/: fragment.glsl
assets/shaders/aura/: fragment.glsl
assets/shaders/disk_effect/: fragment.glsl
assets/shaders/disk_shape/: fragment.glsl
assets/shaders/element/: fragment.glsl  vertex.glsl
assets/shaders/rectangle_effect/: fragment.glsl
assets/shaders/staff/: fragment.glsl
scripts/: build_server.sh  run_web.sh
src/: circle.rs  client.rs  control.rs  engine.rs  game.rs  generators.rs  lib.rs  main.rs  meters.rs  protocol.rs  rect.rs  segment.rs  server.rs  server_main.rs  vec2.rs  world.rs
tests/: communication.rs
web/: gl.js  index.html
