[package]
name = "spell"
version = "0.1.0"
authors = ["elsid <elsid.mail@gmail.com>"]
edition = "2018"
default-run = "spell"

[[bin]]
name = "spell"
edition = "2018"
path = "src/main.rs"
required-features = ["render"]

[[bin]]
name = "spell_server"
edition = "2018"
path = "src/server_main.rs"

[dependencies]
env_logger = "0.8.3"
log = "0.4.14"
rand = { version = "0.8.3", features = ["small_rng"] }
piston = { version = "0.53.0", optional = true }
piston2d-graphics = { version = "0.40.0", optional = true }
pistoncore-glfw_window = { version = "0.71.0", optional = true }
piston2d-opengl_graphics = { version = "0.78.0", optional = true }
parry2d-f64 = "0.4.1"
serde = { version = "1.0.125", features = ["derive"] }
bincode = "1.3.3"
tokio = { version = "1.5.0", features = ["net", "rt", "time"] }
clap = "3.0.0-beta.2"
lz4_flex = "0.7.5"
nalgebra = "0.26.2"
ctrlc = "3.1.9"

[dev-dependencies]
portpicker = "0.1.0"

[features]
default = []
render = ["piston", "piston2d-graphics", "pistoncore-glfw_window", "piston2d-opengl_graphics"]
