[package]
name = "spell"
version = "0.1.0"
authors = ["elsid <elsid.mail@gmail.com>"]
edition = "2018"
default-run = "spell"

[[bin]]
name = "spell"
edition = "2018"
path = "src/main.rs"
required-features = ["client"]

[[bin]]
name = "spell_server"
edition = "2018"
path = "src/server_main.rs"
required-features = ["server"]

[[test]]
name = "spell_test_communication"
edition = "2018"
path = "tests/communication.rs"
required-features = ["client", "desktop", "server"]

[dependencies]
env_logger = { version = "0.8.4", optional = true }
log = { version = "0.4.14", optional = true }
rand = { version = "0.8.4", optional = true, default-features = false }
macroquad = { version = "0.3.3", optional = true }
egui-macroquad = { version = "0.4.0", optional = true }
egui = { version = "0.12.0", optional = true }
parry2d-f64 = { version = "0.4.2", optional = true }
serde = { version = "1.0.126", features = ["derive"], optional = true }
bincode = { version = "1.3.3", optional = true }
tokio = { version = "1.7.1", features = ["net", "rt", "time"], optional = true }
clap = { version = "3.0.0-beta.2", optional = true }
lz4_flex = { version = "0.7.5", optional = true }
nalgebra = { version = "0.26.2", optional = true }
ctrlc = { version = "3.1.9", optional = true }
actix-web = { version = "4.0.0-beta.7", optional = true }
actix-rt = { version = "2.2.0", optional = true }
itertools = { version = "0.10.1", optional = true }
yata = { version = "0.4.7", optional = true }
getrandom = { version = "0.2.3", optional = true, default-features = false }
instant = { version = "0.1.9", optional = true }
sapp-wasm = { version = "0.1.24", optional = true }

[dev-dependencies]
reqwest = { version = "0.11.3", features = ["blocking", "json"], default-features = false }

[features]
default = []
client = [
    "rand/small_rng",
    "macroquad",
    "egui-macroquad",
    "egui",
    "parry2d-f64",
    "serde",
    "bincode",
    "nalgebra",
    "itertools",
    "yata",
    "instant/now",
    "sapp-wasm",
]
desktop = [
    "client",
    "env_logger",
    "log",
    "rand/getrandom",
    "tokio",
    "clap",
    "lz4_flex",
    "yata",
    "instant",
]
server = [
    "env_logger",
    "log",
    "rand/small_rng",
    "rand/getrandom",
    "parry2d-f64",
    "serde",
    "bincode",
    "tokio",
    "clap",
    "lz4_flex",
    "nalgebra",
    "ctrlc",
    "actix-web",
    "actix-rt",
    "itertools",
    "instant",
]
