[package]
name = "spell"
version = "0.1.0"
authors = ["elsid <elsid.mail@gmail.com>"]
edition = "2018"
default-run = "spell"

[[bin]]
name = "spell"
edition = "2018"
path = "src/main.rs"
required-features = ["client"]

[[bin]]
name = "spell_server"
edition = "2018"
path = "src/server_main.rs"
required-features = ["server"]

[[test]]
name = "spell_test_communication"
edition = "2018"
path = "tests/communication.rs"
required-features = ["client", "server"]

[dependencies]
env_logger = { version = "0.8.3", optional = true }
log = { version = "0.4.14", optional = true }
rand = { version = "0.8.3", features = ["small_rng", "getrandom"], optional = true, default-features = false }
piston = { version = "0.53.0", optional = true }
piston2d-graphics = { version = "0.40.0", optional = true }
pistoncore-glfw_window = { version = "0.71.0", optional = true }
piston2d-opengl_graphics = { version = "0.78.0", optional = true }
parry2d-f64 = { version = "0.4.1", optional = true }
serde = { version = "1.0.125", features = ["derive"], optional = true }
bincode = { version = "1.3.3", optional = true }
tokio = { version = "1.5.0", features = ["net", "rt", "time"], optional = true }
clap = { version = "3.0.0-beta.2", optional = true }
lz4_flex = { version = "0.7.5", optional = true }
nalgebra = { version = "0.26.2", optional = true }
ctrlc = { version = "3.1.9", optional = true }
actix-web = { version = "4.0.0-beta.6", optional = true }
actix-rt = { version = "2.2.0", optional = true }
itertools = { version = "0.10.1", optional = true }

[dev-dependencies]
portpicker = "0.1.0"
reqwest = { version = "0.11.3", features = ["blocking", "json"], default-features = false }

[features]
default = []
client = [
    "env_logger",
    "log",
    "rand",
    "piston",
    "piston2d-graphics",
    "pistoncore-glfw_window",
    "piston2d-opengl_graphics",
    "parry2d-f64",
    "serde",
    "bincode",
    "tokio",
    "clap",
    "lz4_flex",
    "nalgebra",
]
server = [
    "env_logger",
    "log",
    "rand",
    "parry2d-f64",
    "serde",
    "bincode",
    "tokio",
    "clap",
    "lz4_flex",
    "nalgebra",
    "ctrlc",
    "actix-web",
    "actix-rt",
    "itertools",
]
